--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "A simple calculator application",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo 'No tests defined'; exit 0"
     },
-    "author": "Your Name",
+    "author": "Sahana",
     "license": "ISC"
   }
   
