--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
     "description": "A simple calculator application",
     "main": "index.js",
     "scripts": {
-      "test": "echo 'No tests defined'; exit 0"
+      "test": "jest"
     },
     "author": "Sahana",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+      "jest": "^28.0.0",
+      "jest-junit": "^13.0.0"
+    },
+    "jest": {
+      "reporters": [
+        "default",
+        ["jest-junit", { "outputDirectory": "test-result", "outputName": "junit.xml" }]
+      ]
+    }
   }
   
